<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="quick_note"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_quick_note"
        android:shortcutLongLabel="@string/shortcut_quick_note_long">
        <intent
            android:action="app.tn.tn.SHORTCUT_QUICK_NOTE"
            android:targetPackage="app.tn.tn"
            android:targetClass="app.tn.tn.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="agenda"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_agenda"
        android:shortcutLongLabel="@string/shortcut_agenda_long">
        <intent
            android:action="app.tn.tn.SHORTCUT_AGENDA"
            android:targetPackage="app.tn.tn"
            android:targetClass="app.tn.tn.MainActivity" />
    </shortcut>
</shortcuts>
